EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==7/30/2009==
Trevius: Added heading option and bool option for saving guard spot to quest::moveto(x,y,z,[h,saveguardspot?]).

==7/29/2009==
AndMetal: Small fix to quest::scribespells() to return the correct amount of scribed spells.
AndMetal: #setaapoints/#setaapts will now consistently add the correct amount of AA points. Also added a rule AA:ExpPerPoint(23976503).
AndMetal: Added a little bit of logging for exp (CLIENT__EXP). Disabled by default.

Optional SQL: utils/sql/svn/853_optional_rule_aaexp.sql

==7/27/2009==
gaeorn: changes to login server to compile under linux. added linux makefile for linux. converted utf16 sql files to normal ascii text.
KLS: Fix for issue where client would stop recieving communication when recieving more than 36 nodes in a find reply. Resolved by capping the amount of nodes find can return, more than 36 will result in unable to easily find message.

==7/26/2009==
AndMetal: AGI Penalty for being encumbered now matches the Titanium client. The old formula was much higher than the client was reporting.
AndMetal: Added InLiquid() function to the WaterMap class. Will return true if you're in Water or Lava (or both?)
AndMetal: Converted to some more Message Strings in zone/spells.cpp.
AndMetal: Changed GetNextAvailableSpellBookSlot() & FindSpellBookSlotBySpellID() to return a result much faster.
AndMetal: The scribespells commands/quest functions should no longer overwrite existing spells & will use only unused book slots.
KLS: Added #path resort nodes to facilitate with keeping the pathing nodes in order.
KLS: Fix for crash from adding/removing nodes.
KLS: Combat range will now check the z axis as well.

==7/25/2009==
KLS: Added a much more accurate but slower Hazard Detection algorithm for #path process that will calculate water and very spikey terrain between two points, other instances of PathManager::NoHazards untouched.