@@ -1,0 +1,1 @@
+INSERT INTO `rule_values` VALUES ('1', 'World:MaxClientsSetByStatus', 'false', 'If True, IP Limiting will be set to the status on the account as long as the status is > MaxClientsPerIP');
